<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:orientation="vertical">
	<EditText android:id="@+id/txtAppUrl"
			android:hint="@string/txtAppUrl"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri"/>
	<Button android:id="@+id/btnSaveSettings"
			android:text="@string/btnSave"
			android:onClick="verifyAndSave"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"/>
</RelativeLayout>
