<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

  <EditText android:id="@+id/instanceSearchBox"
    android:hint="@string/instancesSearch"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textUri"
    android:autofillHints=""
    android:padding="32dp"/>

  <ListView
    android:id="@+id/lstServers"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" />
</LinearLayout>
